# log_bridge

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/: main.py  settings.py
src/application/: abcs.py  cases.py  dtos.py
src/application/auth_log/: cases.py  dtos.py  enums.py  excs.py
src/application/banned_log/: abcs.py  cases.py  dtos.py  excs.py  vals.py
src/application/common/: dtos.py
src/core/: environ.py  excs.py  paths.py
src/core/langs/: excs.py  l10n.py  settings.py
src/core/locales/: ban.pyi  hello.pyi
src/core/locales/en/: ban.ftl  hello.ftl
src/core/locales/ru/: ban.ftl
src/core/locales/source/en/: ban.ftl  ssh_auth.ftl
src/core/locales/stub/: auth.py  auth.pyi  ban.py  ban.pyi  hello.pyi
src/infrastructure/: dispatcher.py  filesystem.py  routes.py
src/infrastructure/dispatchers/: common.py
src/infrastructure/routes/: common.py
src/infrastructure/telegram/: notifier.py
src/presentation/: main.py
src/presentation/ban_log_dispatcher/: abcs.py  app.py
src/presentation/log_dispatchers/: abcs.py  auth.py  banned.py
src/presentation/telegram/: app.py  controllers.py  dispatcher.py  settings.py
tests/: conftest.py
tests/application/banned_log/dtos/: test_ban_log_record.py  test_ssh_auth_log_record.py
tests/infrastructure/dispatchers/: conftest.py  test_common_dispatcher.py
tests/infrastructure/filesystem/: conftest.py  test_common_log_file.py
tests/infrastructure/routes/: conftest.py  test_common_route.py
tests/integration/infrastructure/: filesystem.py
tests/unit/infrastructure/: dispatcher.py  filesystem.py
tests/unit/infrastructure/dispatchers/: common.py  conftest.py
tests/unit/infrastructure/routes/: common.py  conftest.py
(+10 files in other folders)
