[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "PT",
    "ARG",
    "D",
    "D213",
]

ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D212",
]
extend-unsafe-fixes = [
    "D201",
    "D205",
    "D209",
    "D213",
    "D300",
    "D415",
    "D400",
    "D416"
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.poetry]
name = "log_bridge"
version = "0.1.0"
description = "Real-time session monitoring and multi-IP"
authors = ["boradydev"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
ruff = "^0.14.14"
pyright = "^1.1.408"
aiogram-i18n = {extras = ["fluent"], version = "^1.5"}
aiofiles = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "hypothesis (>=6.151.9,<7.0.0)",
    "faker (>=40.5.1,<41.0.0)",
    "ftl-extract (>=0.10.0,<0.11.0)",
]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
addopts = "-ra --cov=src/ --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: тесты, требующие реальную базу данных (Postgres)",
]
